--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,8 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
+- degree: Bachelor of Science, IT & Administrative Management, Cybersecurity specialization
+  uni: Central Washington University
   year: 2004 &mdash; 2008
   awards:
-    - award: Summa Cumme Laude graduate
+    - award: Deans List
   summary: If you had any meaningful roles at college, feel free to write about them here
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
